added /api/room/{roomName}/meetings endpoint
