# api.js
@@ -5,6 +5,8 @@ var db = require('./database');
 
 var exports = module.exports = {};
 
+var mysql = require("mysql");
+
 exports.testConnection = db.testConnection;
 
 exports.cleanUp = function() {
@@ -40,11 +42,12 @@ exports.getMeetingById = function (meetingId) {
 };
 
 exports.createMeeting = function(meeting) {
-    const sql = "INSERT INTO ebdb.Meeting (name, startDateTime, endDateTime) VALUES (?, ?, ?);";
+    const sql = "INSERT INTO ebdb.Meeting (name, start_datetime, end_datetime, calendar) VALUES (?, ?, ?, ?);";
     const inserts = [
         meeting.name,
         db.formatDatetime(meeting.startDateTime),
-        db.formatDatetime(meeting.endDateTime)
+        db.formatDatetime(meeting.endDateTime),
+        meeting.calendar
     ];
 
     return new Promise(function (resolve, reject) {
@@ -117,8 +120,8 @@ exports.deleteMeeting = function (meetingId) {
 
 // Room operations
 
-exports.getRoomById = function (roomId) {
-    const sql = "SELECT * FROM ebdb.MeetingRoom WHERE id = " + db.pool.escape(roomId);
+exports.getRoomByName = function (roomName) {
+    const sql = "SELECT * FROM ebdb.MeetingRoom WHERE name = " + db.pool.escape(roomName);
     return new Promise(function (resolve, reject) {
         db.pool.getConnection()
             .then(function (conn){
@@ -142,11 +145,39 @@ exports.getRoomById = function (roomId) {
     });
 };
 
+exports.getMeetingsByRoomName = function(roomName) {
+
+    const sql = "SELECT * FROM ebdb.Meeting WHERE calendar in (SELECT calendar from ebdb.MeetingRoom WHERE name = " + db.pool.escape(roomName) + ") ORDER BY start_datetime";
+
+    return new Promise(function (resolve, reject) {
+        db.pool.getConnection()
+            .then(function (conn){
+                conn.query(sql)
+                    .then(function (results) {
+                        if (results.length === 0) {
+                            resolve({status: "NOT FOUND"});
+                        } else {
+                            const response = {
+                                meetings: results
+                            };
+                            resolve({status: "FOUND", result: response});
+                        }
+                        conn.release();
+                    })
+                    .catch(function (err) {
+                        console.warn(err);
+                        reject({status: "FAILURE", error: err});
+                        conn.release();
+                    });
+            });
+    });
+};
+
 exports.createRoom = function (room) {
 
     const calendarName = room.name + "'s Meeting Room Calendar" || "";
     const calendarSql = "INSERT INTO ebdb.Calendar (name) VALUES (?);";
-    const roomSql = "INSERT INTO ebdb.MeetingRoom (name, calendar_fk) VALUES (?, ?);";
+    const roomSql = "INSERT INTO ebdb.MeetingRoom (name, calendar) VALUES (?, ?);";
 
     return new Promise(function (resolve, reject) {
         db.pool.getConnection()
@@ -156,7 +187,7 @@ exports.createRoom = function (room) {
                         const inserts = [room.name, results.insertId];
                         conn.query(roomSql, inserts)
                             .then(function (results) {
-                                resolve({status: "SUCCESS", createdId: results.insertId});
+                                resolve({status: "SUCCESS", createdId: room.name});
                                 conn.release();
                             })
                             .catch(function (err) {
@@ -193,7 +224,7 @@ exports.updateRoom = function(obj) {
 
 exports.deleteRoom = function(roomId) {
 
-    const deleteCalendarSql = "DELETE FROM ebdb.Calendar WHERE id in (SELECT calendar_fk from ebdb.MeetingRoom WHERE id = " + db.pool.escape(roomId) + ")";
+    const deleteCalendarSql = "DELETE FROM ebdb.Calendar WHERE id in (SELECT calendar from ebdb.MeetingRoom WHERE id = " + db.pool.escape(roomId) + ")";
     const deleteRoomSql = "DELETE FROM ebdb.MeetingRoom WHERE id = " + db.pool.escape(roomId);
 
     return new Promise(function (resolve, reject) {
@@ -252,7 +283,7 @@ exports.createUser = function (user) {
 
     const calendarName = user.email + "'s Calendar" || "";
     const calendarSql = "INSERT INTO ebdb.Calendar (name) VALUES (?);";
-    const userSql = "INSERT INTO ebdb.User (email, given_name, family_name, primary_calendar_fk) VALUES (?, ?, ?, ?);";
+    const userSql = "INSERT INTO ebdb.User (email, given_name, family_name, primary_calendar) VALUES (?, ?, ?, ?);";
 
     return new Promise(function (resolve, reject) {
         db.pool.getConnection()
@@ -314,7 +345,7 @@ exports.updateUser = function(obj) {
 
 exports.deleteUser = function (userId) {
 
-    const deleteCalendarSql = "DELETE FROM ebdb.Calendar WHERE id in (SELECT primary_calendar_fk from ebdb.User WHERE id = " + db.pool.escape(userId) + ")";
+    const deleteCalendarSql = "DELETE FROM ebdb.Calendar WHERE id in (SELECT primary_calendar from ebdb.User WHERE id = " + db.pool.escape(userId) + ")";
     const deleteUserSql = "DELETE FROM ebdb.User WHERE id = " + db.pool.escape(userId);
 
     return new Promise(function (resolve, reject) {
